--- a/src/static/style.css
+++ b/src/static/style.css
@@ -26,7 +26,7 @@ body {
 
 .main_text{
     color: aquamarine;
-    font-family: 'Archivo Black';
+    font-family: 'Cascadia Code';
     text-shadow: 0 0 10px
 }
 
