--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -6,7 +6,7 @@
       <div class="row align-items-start">
           <div class="row gy-4">
               <h1 style="font-size: 70px" class="main_text">
-                  Admin panel
+                  админ панель
               </h1>
           </div>
       </div>
@@ -18,7 +18,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Archivo Black';" href="/admin/inventory_add" role="button">Add item</a>
+                font-family: 'Cascadia Code';" href="/admin/inventory_add" role="button">добавить предмет</a>
           </div>
 
       </div>
@@ -32,7 +32,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Archivo Black';" href="/admin/all_item" role="button">All items</a>
+                font-family: 'Cascadia Code';" href="/admin/all_item" role="button">все предметы</a>
           </div>
       </div>
   </div>
@@ -45,7 +45,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Archivo Black';" href="/admin/get_user_applet" role="button">All applications</a>
+                font-family: 'Cascadia Code';" href="/admin/get_user_applet" role="button">управление заявками</a>
           </div>
       </div>
   </div>
@@ -57,7 +57,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Archivo Black';" href="/buy" role="button">buy list</a>
+                font-family: 'Cascadia Code';" href="/buy" role="button">управление закупками</a>
           </div>
       </div>
   </div>
@@ -69,7 +69,7 @@
           <br>
           <div class="d-grid gap-2">
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Archivo Black';" href="/admin/get_logs" role="button">get report</a>
+                font-family: 'Cascadia Code';" href="/admin/get_logs" role="button">получение отчета</a>
           </div>
       </div>
   </div>
