--- a/src/templates/applications.html
+++ b/src/templates/applications.html
@@ -6,7 +6,7 @@
       <div class="row align-items-start">
           <div class="row gy-4">
               <h1 style="font-size: 70px" class="main_text">
-                  All inventory items
+                  доступные предметы
               </h1>
           </div>
       </div>
@@ -21,9 +21,9 @@
           <thead>
             <tr>
                 <th class="main_text" style="color: aquamarine" scope="col"><h3>ID</h3></th>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>Name</h3></th>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>Quantity</h3></th>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>Status</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>Название</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>Кол-во</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>Статус</h3></th>
 
             </tr>
           </thead>
@@ -52,19 +52,19 @@
                 <div class="card-body">
                     <form action="" method="POST">
                         <div class="form-group">
-                            <label for="item_id" style="color: aquamarine;"><b>Put item id</b></label>
+                            <label for="item_id" style="color: aquamarine;"><b>Введите id предмета</b></label>
                             <input type="text" id="item_id" name="item_id" class="form-control" required>
                         </div>
                         <br>
                         <div class="form-group">
-                            <label for="item_id" style="color: aquamarine;"><b>Put count items</b></label>
+                            <label for="item_id" style="color: aquamarine;"><b>Введите количество</b></label>
                             <input type="text" id="value" name="value" class="form-control" required>
                         </div>
                         <br>
                         <div class="container text-center">
                         <button type="submit" style=" --bs-btn-padding-y: 0.4rem; --bs-btn-padding-x: 6rem; --bs-btn-font-size: 1rem;
-                      color: aquamarine; border: 3px solid aquamarine; font-family:'Archivo Black';" class="btn btn-dark">
-                            send applications
+                      color: aquamarine; border: 3px solid aquamarine; font-family:'Cascadia Code';" class="btn btn-dark">
+                            отправить заявку
                         </button>
                         </div>
                     </form>
