--- a/src/templates/buy.html
+++ b/src/templates/buy.html
@@ -165,7 +165,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
           <div style="position: absolute; top: 10px; left: 10px;">
-    <button onclick="window.history.back();" class="btn btn-dark btn-sm" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Archivo Black';">Back</button>
+    <button onclick="window.history.back();" class="btn btn-dark btn-sm" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code';">назад</button>
 </div>
 
         <div class="container mt-5 text-center">
