--- a/src/templates/my_inventory.html
+++ b/src/templates/my_inventory.html
@@ -6,7 +6,7 @@
     <div class="row align-items-start">
         <div class="row gy-4">
             <h1 style="font-size: 70px" class="main_text">
-                {{username}} inventory items
+               инвентарь пользователя {{username}}
             </h1>
         </div>
     </div>
@@ -19,9 +19,9 @@
             <table class="table table-borderless">
                 <thead>
                     <tr>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Item ID</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Name</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Count</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>ID предмета</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Название предмета</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Кол-во</h3></th>
                     </tr>
                 </thead>
                 <tbody>
