--- a/src/templates/register_page.html
+++ b/src/templates/register_page.html
@@ -11,35 +11,35 @@
             <div class="card">
                 <div class="card-header text-center">
                    <h1 class="main_text">
-                  Registration
+                  Регистрация
                    </h1>
                 </div>
                 <div class="card-body">
                     <form action="" method="POST">
                         <div class="form-group">
-                            <label for="username" style="color: aquamarine;"><b>Username</b></label>
+                            <label for="username" style="color: aquamarine;"><b>имя пользователя</b></label>
                             <input type="text" id="username" name="username" class="form-control" required>
                         </div>
                         <br>
                         <div class="form-group">
-                            <label for="email" style="color: aquamarine;"><b>Email</b></label>
+                            <label for="email" style="color: aquamarine;"><b>почта</b></label>
                             <input type="text" id="email" name="email" class="form-control" required>
                         </div>
                         <br>
                         <div class="form-group">
-                            <label for="password" style="color: aquamarine;"><b>Password</b></label>
+                            <label for="password" style="color: aquamarine;"><b>пароль</b></label>
                             <input type="password" id="password" name="password" class="form-control" required>
                         </div>
                         <br>
                         <div class="form-group">
-                            <label for="password" style="color: aquamarine;"><b>Repeat password</b></label>
+                            <label for="password" style="color: aquamarine;"><b>повторите пароль</b></label>
                             <input type="password" id="password_return" name="password_return" class="form-control" required>
                         </div>
                         <br>
                         <div class="container text-center">
                         <button type="submit" style=" --bs-btn-padding-y: 0.4rem; --bs-btn-padding-x: 6rem; --bs-btn-font-size: 1rem;
-                      color: aquamarine; border: 3px solid aquamarine; font-family:'Archivo Black';" class="btn btn-dark">
-                            submit
+                      color: aquamarine; border: 3px solid aquamarine; font-family:'Cascadia Code';" class="btn btn-dark">
+                            отправить
                         </button>
                         </div>
 
@@ -55,9 +55,9 @@
         <div class="col-md-6">
 
             <div class="d-grid gap-2">
-                <a href="/login" role="button" style="color: aquamarine; border: 3px solid aquamarine; font-family:'Archivo Black'; font-size: 15px"
+                <a href="/login" role="button" style="color: aquamarine; border: 3px solid aquamarine; font-family:'Cascadia Code'; font-size: 15px"
                         class="btn btn-dark">
-                    login
+                    вход
                 </a>
             </div>
         </div>
