--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -6,7 +6,7 @@
     <div class="row align-items-start">
         <div class="row gy-4">
             <h1 style="font-size: 70px" class="main_text">
-                {{username}} applications
+                заявки пользователя {{username}}
             </h1>
         </div>
     </div>
@@ -20,10 +20,10 @@
                 <thead>
                     <tr>
                         <th class="main_text" style="color: aquamarine" scope="col"><h3>ID</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Name</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Status</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Item</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Count</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Пользователь</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Статус</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Предмет</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Кол-во</h3></th>
                     </tr>
                 </thead>
                 <tbody>
