--- a/src/templates/all_items.html
+++ b/src/templates/all_items.html
@@ -5,7 +5,7 @@
 <div class="container-fluid text-center">
     <div class="row align-items-start">
         <div class="row gy-4">
-            <h1 style="font-size: 70px" class="main_text">All inventory items</h1>
+            <h1 style="font-size: 70px" class="main_text">все доступные предметы</h1>
         </div>
     </div>
 </div>
@@ -17,10 +17,10 @@
             <table class="table table-borderless">
                 <thead>
                     <tr>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Item ID</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Name</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Quantity</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Status</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>ID</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Название</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Кол-во</h3></th>
+                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Статус</h3></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -44,8 +44,8 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="editModalLabel{{ item.id }}" style="color: aquamarine; font-family: 'Archivo Black'; text-shadow: 0 0 10px">
-                        Edit ID: {{ item.id }} NAME: {{ item.name }}
+                                    <h5 class="modal-title" id="editModalLabel{{ item.id }}" style="color: aquamarine; font-family: 'Cascadia Code'; text-shadow: 0 0 10px">
+                        Редактировать: ID - {{ item.id }}, NAME - {{ item.name }}
                                     </h5>
                                     <button type="button" class="btn-close" data-dismiss="modal" aria-label="Закрыть">
                                             <span aria-hidden="true"></span>
@@ -54,17 +54,17 @@
                                 <form action="{{ url_for('edit_item', item_id=item.id) }}" method="POST">
                                     <div class="modal-body">
                                         <div class="form-group">
-                                            <label for="name{{ item.id }}" style="color: aquamarine;"><b>Name</b></label>
+                                            <label for="name{{ item.id }}" style="color: aquamarine;"><b>название</b></label>
                                             <input type="text" id="name{{ item.id }}" name="name" class="form-control" required value="{{ item.name }}">
                                         </div>
                                         <br>
                                         <div class="form-group">
-                                            <label for="quantity{{ item.id }}" style="color: aquamarine;"><b>Quantity</b></label>
+                                            <label for="quantity{{ item.id }}" style="color: aquamarine;"><b>количество</b></label>
                                             <input type="number" id="quantity{{ item.id }}" name="quantity" class="form-control" required value="{{ item.quantity }}">
                                         </div>
                                         <br>
                                         <div class="form-group">
-                                                                                        <label for="status{{ item.id }}" style="color: aquamarine;"><b>Status</b></label>
+                                                                                        <label for="status{{ item.id }}" style="color: aquamarine;"><b>статус</b></label>
                                             <select class="form-select" name="status" required>
                                                 <option value="new" {% if item.status == 'new' %}selected{% endif %}>Новый</option>
                                                 <option value="used" {% if item.status == 'used' %}selected{% endif %}>Использованный</option>
