--- a/src/templates/get_user_applet.html
+++ b/src/templates/get_user_applet.html
@@ -6,7 +6,7 @@
       <div class="row align-items-start">
           <div class="row gy-4">
               <h1 style="font-size: 70px" class="main_text">
-                  All applications
+                  все заявки
               </h1>
           </div>
       </div>
@@ -15,17 +15,16 @@
 
         <div class="container-fluid mt-5">
     <div class="row justify-content-center">
-    <div class="col-6">
+    <div class="col-8">
     <br><br>
         <table class="table table-borderless">
           <thead>
             <tr>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>ID</h3></th>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>User ID</h3></th>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>Name</h3></th>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>Count</h3></th>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>Status</h3></th>
-                <th class="main_text" style="color: aquamarine" scope="col"><h3>Item ID</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>ID заявки</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>Пользователь</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>Кол-во</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>Статус</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>ID предмета</h3></th>
 
             </tr>
           </thead>
@@ -34,7 +33,6 @@
                 {% for app in applets %}
 
                     <td>{{ app.id }}</td>
-                    <td>{{ app.user_id }}</td>
                     <td>{{ app.name }}</td>
                     <td>{{ app.count }}</td>
                     <td
