--- a/src/templates/login_page.html
+++ b/src/templates/login_page.html
@@ -9,25 +9,25 @@
             <div class="card">
                 <div class="card-header text-center">
                    <h1 class="main_text">
-                  Login
+                  Вход
                    </h1>
                 </div>
                 <div class="card-body">
                     <form action="" method="POST">
                         <div class="form-group">
-                            <label for="username" style="color: aquamarine;"><b>Username</b></label>
+                            <label for="username" style="color: aquamarine;"><b>имя пользователя</b></label>
                             <input type="text" id="username" name="username" class="form-control" required>
                         </div>
                         <br>
                         <div class="form-group">
-                            <label for="password" style="color: aquamarine;"><b>Password</b></label>
+                            <label for="password" style="color: aquamarine;"><b>пароль</b></label>
                             <input type="password" id="password" name="password" class="form-control" required>
                         </div>
                         <br>
                         <div class="container text-center">
                         <button type="submit" style=" --bs-btn-padding-y: 0.4rem; --bs-btn-padding-x: 6rem; --bs-btn-font-size: 1rem;
-                      color: aquamarine; border: 3px solid aquamarine; font-family:'Archivo Black';" class="btn btn-dark">
-                            sing_in
+                      color: aquamarine; border: 3px solid aquamarine; font-family:'Cascadia Code';" class="btn btn-dark">отправить
+
                         </button>
                         </div>
 
@@ -43,9 +43,9 @@
         <div class="col-md-6">
 
             <div class="d-grid gap-2">
-                <a href="/registration" role="button" style="color: aquamarine; border: 3px solid aquamarine; font-family:'Archivo Black'; font-size: 15px"
+                <a href="/registration" role="button" style="color: aquamarine; border: 3px solid aquamarine; font-family:'Cascadia Code'; font-size: 15px"
                         class="btn btn-dark">
-                    registration
+                    регистрация
                 </a>
             </div>
         </div>
