--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -20,7 +20,6 @@
               <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
                 font-family: 'Cascadia Code';" href="/admin/inventory_add" role="button">добавить предмет</a>
           </div>
-
       </div>
   </div>
 </div>
@@ -73,6 +72,72 @@
           </div>
       </div>
   </div>
+</div>
+
+<div class="container-fluid text-center">
+    <div class="row text-justify-center">
+        <div class="col-md-6 offset-md-3">
+            <br>
+            <div class="d-grid gap-2">
+                <button
+                    class="btn btn-dark"
+                    style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code';"
+                    id="showLogsBtn"
+                    data-bs-toggle="modal"
+                    data-bs-target="#reportsModal">
+                    заявки на ремонт
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="reportsModal" tabindex="-1" aria-labelledby="reportsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 style="font-family: 'Cascadia Code'; font-size: 30px; color: red;" class="modal-title" id="reportsModalLabel">Заявки на ремонт</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+            </div>
+            <div class="modal-body">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Пользователь</th>
+                            <th>Текущий сатус</th>
+                            <th>Название предмета</th>
+                            <th>Количество</th>
+                            <th>ID предмета</th>
+                            <th>ID пользователя</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for report in reports %}
+                        <tr>
+                            <td>{{ report.id }}</td>
+                            <td>{{ report.username }}</td>
+                            <td
+                            {% if report.status == 'not accepted' %}style="color: red;"
+                            {% elif report.status == 'accepted' %}style="color: lime;"
+                            {% elif report.status == 'return' %}style="color: cornflowerblue;"
+                            {% endif %}>
+                            {{ report.status }}
+                            </td>
+                            <td>{{ report.item_name }}</td>
+                            <td>{{ report.quantity}}</td>
+                            <td>{{ report.item_id}}</td>
+                            <td>{{ report.user_id}}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 
