--- a/src/templates/my_inventory.html
+++ b/src/templates/my_inventory.html
@@ -56,6 +56,9 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header text-center">
+                   <h3 class="main_text">
+                  заявка о поломке
+                   </h3>
                 </div>
                 <div class="card-body">
                     <form action="" method="POST">
