--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -67,5 +67,16 @@
     </div>
 </div>
 
+    <div class="container mt-5 text-center">
+        <div class="row justify-content-center">
+        <div class="col-md-6">
+    {% for cat, msg in get_flashed_messages(True) %}
+        <div id ="popup" class="flash {{cat}}"><h3><b>{{msg}}</b></h3></div>
+    {% endfor %}
+        </div>
+    </div>
+</div>
+
+
 <script src="../static/script_for_flash.js"></script>
 {% endblock %}
