--- a/src/templates/login_page.html
+++ b/src/templates/login_page.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -53,6 +53,17 @@
 </div>
 
 
+<div class="container mt-3 text-center">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <a href="{{ url_for('yandex_login') }}" class="btn btn-yandex">
+               <span class="yandex-logo">Я</span>
+                Войти через Yandex ID
+            </a>
+        </div>
+    </div>
+</div>
+
     <div class="container mt-5 text-center">
         <div class="row justify-content-center">
         <div class="col-md-6">
@@ -62,6 +73,9 @@
         </div>
     </div>
 </div>
+
+<script src="../static/script_for_flash.js"></script>
+
 
     <script src="../static/script_for_flash.js"></script>
 {% endblock %}
