--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -20,7 +20,6 @@
                 <thead>
                     <tr>
                         <th class="main_text" style="color: aquamarine" scope="col"><h3>ID</h3></th>
-                        <th class="main_text" style="color: aquamarine" scope="col"><h3>Пользователь</h3></th>
                         <th class="main_text" style="color: aquamarine" scope="col"><h3>Статус</h3></th>
                         <th class="main_text" style="color: aquamarine" scope="col"><h3>Предмет</h3></th>
                         <th class="main_text" style="color: aquamarine" scope="col"><h3>Кол-во</h3></th>
@@ -30,7 +29,6 @@
                     {% for app in applications %}
                     <tr>
                         <td>{{ app.id }}</td>
-                        <td>{{ app.name }}</td>
                         <td
                             {% if app.status == 'not accepted' %}style="color: red;"
                             {% elif app.status == 'accepted' %}style="color: lime;"
@@ -38,7 +36,7 @@
                             {% endif %}>
                             {{ app.status }}
                         </td>
-                        <td>{{ app.item_id }}</td>
+                        <td>{{ app.item_name }}</td>
                         <td>{{ app.count }}</td>
                     </tr>
                     {% endfor %}
