--- a/src/templates/all_items.html
+++ b/src/templates/all_items.html
@@ -44,7 +44,7 @@
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="editModalLabel{{ item.id }}" style="color: aquamarine; font-family: 'Cascadia Code'; text-shadow: 0 0 10px">
+                                    <h5 class="modal-title" id="editModalLabel{{ item.id }}" style="color: aquamarine; font-family: 'Bahnschrift', sans-serif; text-shadow: 0 0 10px">
                         Редактировать: ID - {{ item.id }}, NAME - {{ item.name }}
                                     </h5>
                                     <button type="button" class="btn-close" data-dismiss="modal" aria-label="Закрыть">
