--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="col-auto">
-            <a href="/logout" style="color: aquamarine;border: 3px solid aquamarine;font-family:'Cascadia Code';"
+            <a href="/logout" style="color: aquamarine;border: 3px solid aquamarine;font-family: 'Bahnschrift', sans-serif;"
                role="button" class="btn btn-sm btn-dark logoutbtn">
                 <div class="main_text">
                     выход
@@ -37,7 +37,7 @@
             <br>
             <div class="d-grid gap-2">
                 <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                    font-family: 'Cascadia Code';" href="/applications" role="button">создать заявку</a>
+                    font-family: 'Bahnschrift', sans-serif;" href="/applications" role="button">создать заявку</a>
             </div>
         </div>
     </div>
@@ -49,7 +49,7 @@
             <br>
             <div class="d-grid gap-2">
                 <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                    font-family: 'Cascadia Code';" href="{{ url_for('account', username=name) }}" role="button">мои заявки</a>
+                    font-family: 'Bahnschrift', sans-serif;" href="{{ url_for('account', username=name) }}" role="button">мои заявки</a>
             </div>
         </div>
     </div>
@@ -61,7 +61,7 @@
             <br>
             <div class="d-grid gap-2">
                 <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                    font-family: 'Cascadia Code';" href="{{ url_for('my_inventory') }}" role="button">мой инвентарь</a>
+                    font-family: 'Bahnschrift', sans-serif;" href="{{ url_for('my_inventory') }}" role="button">мой инвентарь</a>
             </div>
         </div>
     </div>
