--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,7 +26,7 @@
         </div>
 
       <div style="position: absolute; top: 10px; left: 10px;">
-    <button onclick="window.history.back();" class="btn btn-dark btn-sm" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code';"><b>назад</b></button>
+    <button onclick="window.history.back();" class="btn btn-dark btn-sm" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif;"><b>назад</b></button>
 </div>
 
   </footer>
