--- a/src/templates/buy.html
+++ b/src/templates/buy.html
@@ -18,14 +18,14 @@
 
         .flash.success {
             color: #00f045;
-            font-family: 'Verdana';
+            font-family: 'Verdana', monospace;
             -moz-text-shadow:0 0 20px #00f045;
             -webkit-text-shadow:0 0 20px #00f045;
             text-shadow:0 0 20px #00f045;
         }
         .flash.error {
             color: #cb1300;
-            font-family: 'Verdana';
+            font-family: 'Verdana', monospace;
             -moz-text-shadow:0 0 20px #cb1300;
             -webkit-text-shadow:0 0 20px #cb1300;
             text-shadow:0 0 20px #cb1300;
@@ -165,7 +165,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
           <div style="position: absolute; top: 10px; left: 10px;">
-    <button onclick="window.history.back();" class="btn btn-dark btn-sm" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Cascadia Code';">назад</button>
+    <button onclick="window.history.back();" class="btn btn-dark btn-sm" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif;">назад</button>
 </div>
 
         <div class="container mt-5 text-center">
