--- a/src/templates/login_page.html
+++ b/src/templates/login_page.html
@@ -26,7 +26,7 @@
                         <br>
                         <div class="container text-center">
                         <button type="submit" style=" --bs-btn-padding-y: 0.4rem; --bs-btn-padding-x: 6rem; --bs-btn-font-size: 1rem;
-                      color: aquamarine; border: 3px solid aquamarine; font-family:'Cascadia Code';" class="btn btn-dark">отправить
+                      color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif;" class="btn btn-dark">отправить
 
                         </button>
                         </div>
@@ -43,7 +43,7 @@
         <div class="col-md-6">
 
             <div class="d-grid gap-2">
-                <a href="/registration" role="button" style="color: aquamarine; border: 3px solid aquamarine; font-family:'Cascadia Code'; font-size: 15px"
+                <a href="/registration" role="button" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Bahnschrift', sans-serif; font-size: 15px"
                         class="btn btn-dark">
                     регистрация
                 </a>
